Link: major refector, added LinkSub and material override
Abstract Link core functionality to class LinkHandle, preparing for
exposing to Python.

Added support for LinkSub that links into a sub object/element.

Allow material override on linked object

--- a/src/Gui/Icons/resource.qrc
+++ b/src/Gui/Icons/resource.qrc
@@ -151,6 +151,7 @@
         <file>px.svg</file>
         <file>AddonManager.svg</file>
         <file>link.svg</file>
+        <file>linksub.svg</file>
     </qresource>
     <!-- Alternative directory names for icons that should be loaded from a theme -->
     <!-- See also http://permalink.gmane.org/gmane.comp.lib.qt.general/26374 -->
