--- a/src/Gui/Icons/resource.qrc
+++ b/src/Gui/Icons/resource.qrc
@@ -152,6 +152,10 @@
         <file>AddonManager.svg</file>
         <file>link.svg</file>
         <file>linksub.svg</file>
+        <file>links.svg</file>
+        <file>LinkElement0.svg</file>
+        <file>LinkElement1.svg</file>
+        <file>LinkElement2.svg</file>
     </qresource>
     <!-- Alternative directory names for icons that should be loaded from a theme -->
     <!-- See also http://permalink.gmane.org/gmane.comp.lib.qt.general/26374 -->
