Draft: add CloneSubs

--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -64,6 +64,7 @@
         <file>icons/Snap_WorkingPlane.svg</file>
         <file>icons/Snap_Special.svg</file>
         <file>icons/Draft_Clone.svg</file>
+        <file>icons/Draft_CloneSubs.svg</file>
         <file>icons/Draft_Heal.svg</file>
         <file>icons/Draft_Ellipse.svg</file>
         <file>icons/Draft_ShapeString.svg</file>
